# Fussion-Archived

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  build.sh  imgui.ini
CMake/: Warnings.cmake
Core/: CMakeLists.txt
Core/Fussion/: Application.cpp  Application.hpp  Window.hpp
Core/Impl/: OpenGLShader.cpp  Shader.cpp  VertexArrayImpl.cpp  VertexBufferImpl.cpp  WindowGLFW.cpp  WindowGLFW.hpp  WindowGlfw.cpp
Core/Source/Fussion/: Application.cpp  Application.hpp  CMakeLists.txt  Window.hpp
Core/Source/Fussion/Events/: ApplicationEvents.hpp  Event.hpp  KeyboardEvents.hpp  MouseEvents.hpp
Core/Source/Fussion/Input/: Keys.hpp
Core/Source/Fussion/Rendering/: Shader.hpp  VertexArray.hpp  VertexBuffer.hpp
Editor/: CMakeLists.txt  Camera.cpp  Camera.hpp  CubeData.hpp  Editor.cpp  Editor.hpp  EditorApplication.cpp  EditorApplication.hpp  ImGuiHelpers.cpp  ImGuiHelpers.h  main.cpp
Editor/Components/: EditorCameraComponent.cpp  EditorCameraComponent.h
Editor/Layers/: EditorLayer.cpp  EditorLayer.h  PropertiesEditorPanel.cpp  PropertiesEditorPanel.h  SandboxLayer.cpp  SandboxLayer.h  SceneTreePanel.cpp  SceneTreePanel.h
Editor/Panels/: PropertiesEditorPanel.cpp  PropertiesEditorPanel.h  SceneTreePanel.cpp  SceneTreePanel.h  ViewportPanel.cpp  ViewportPanel.h
Editor/Resources/: main.scene.kdl  simple.frag  simple.vert
Editor/Resources/Shaders/: FlatColor.glsl  Texture.glsl
Editor/Systems/: EditorCameraSystem.cpp  EditorCameraSystem.h
Fussion/: CMakeLists.txt
Fussion/Platform/: ImGuiImplFussion.cpp  IndexBufferImpl.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  StbImage.c  StbImage.hpp  VertexArrayImpl.cpp  VertexBufferImpl.cpp  WindowGLFW.cpp
Fussion/src/Fussion/: Application.cpp  Application.h  Application.hpp  Core.h  Fussion.h  GameObject.cpp  GameObject.hpp  Layer.h  Layer.hpp  Log.cpp  Log.h  StbImage.cpp  Types.h  Types.hpp  World.cpp  World.hpp
Fussion/src/Fussion/Components/: IComponent.hpp  Transform.cpp  Transform.hpp
Fussion/src/Fussion/Core/: Application.cpp  Application.h  Core.h  Log.h  Types.h
Fussion/src/Fussion/Debug/: Profiling.cpp  Profiling.h
Fussion/src/Fussion/Entity/: Components.h  Entity.h  Scene.cpp  Scene.h
Fussion/src/Fussion/Events/: ApplicationEvents.h  ApplicationEvents.hpp  Event.h  Event.hpp  KeyboardEvents.h  KeyboardEvents.hpp  MouseEvents.h  MouseEvents.hpp
Fussion/src/Fussion/GCS/: Component.h  GameObject.cpp  GameObject.h  Registry.cpp  Registry.h  SpriteRenderer.cpp  SpriteRenderer.h  Transform.cpp  Transform.h
Fussion/src/Fussion/Input/: Input.h  Keys.h
Fussion/src/Fussion/Layers/: ImGuiImpl.hpp  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiLayer.hpp  Layer.h  LayerStack.h
Fussion/src/Fussion/Math/: BoundingBox.cpp  BoundingBox.h  Math.cpp  Math.h  Matrix4.cpp  Matrix4.h  Matrix4.hpp  Transform.cpp  Transform.h  Vector3.cpp  Vector3.h  Vector3.hpp
Fussion/src/Fussion/Rendering/: Bitmap.cpp  Bitmap.h  Buffers.cpp  Buffers.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  IndexBuffer.h  IndexBuffer.hpp  RenderCommand.cpp  RenderCommand.h  RenderContext.h  Renderer.cpp  Renderer.h  RendererApi.cpp  RendererApi.h  Shader.cpp  Shader.h  Shader.hpp  Texture.h  Texture.hpp  VertexArray.cpp  VertexArray.h  VertexArray.hpp  VertexBuffer.h  VertexBuffer.hpp
Fussion/src/Fussion/Rendering/2D/: Camera.cpp  Camera.h  Camera2DController.cpp  Camera2DController.h  Renderer2D.cpp  Renderer2D.h
Fussion/src/Fussion/Scene/: Component.h  Components.cpp  Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  System.h
Fussion/src/Fussion/Scene/Components/: Camera.cpp  Camera.h  Transform.cpp  Transform.h
Fussion/src/Fussion/Windowing/: VideoMode.h  Window.h  Window.hpp
Fussion/src/Platform/: CMakeLists.txt  GlfwInput.cpp  GlfwInput.h  WindowGLFW.cpp  WindowGLFW.h
Fussion/src/Platform/OpenGL/: IndexBufferImpl.cpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRenderContext.cpp  OpenGLRenderContext.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h  OpenGlRendererApi.cpp  OpenGlRendererApi.h  VertexArrayImpl.cpp  VertexBufferImpl.cpp
Sandbox/: CMakeLists.txt  Game.cpp  Game.hpp  main.cpp
